#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET image_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES imagehandler_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} image GTest::gmock_main)
target_include_directories(${TARGET} PUBLIC ${AOS_CORE_LIB_DIR}/tests/include ${AOS_CORE_LIB_DIR}/tests/sm)
