#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET networkmanager_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES cni_test.cpp trafficmonitor_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} networkmanager GTest::gmock_main)
