#
# Copyright (C) 2024 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET smclient_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES smclient_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(
    ${TARGET}
    smclient
    aoscommon
    aosiamclient
    aostestcore
    aostestcommon
    GTest::gmock_main
)
